--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     ports:
       - "6432:5432"
     image: postgres:13.4
+    volumes:
+      - /opt/telegram_bot/postgres:/var/lib/postgresql
     environment:
         - POSTGRES_PASSWORD=777WhyMeLucky777
     command: postgres
